Fix screen height issues on mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -7,4 +7,5 @@
 body {
   overflow: hidden;
   font-family: sans-serif;
+  position: fixed;
 }
